WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115485
TextTrackMenu crashes in ports where MediaElement players are lazily created
https://bugs.webkit.org/show_bug.cgi?id=115485
Summary
TextTrackMenu crashes in ports where MediaElement players are lazily created
Joseph Pecoraro
Reported
2013-05-01 12:20:25 PDT
iOS is a port that lazily creates its player. HTMLMediaElement frequently null checks m_player, but doesn't in the PLATFORM_TEXT_TRACK_MENU code. We should add the null checks.
Attachments
[PATCH] Proposed Fix
(1.63 KB, patch)
2013-05-01 12:22 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2013-05-01 12:22:03 PDT
Created
attachment 200234
[details]
[PATCH] Proposed Fix
Eric Carlson
Comment 2
2013-05-01 12:27:07 PDT
Comment on
attachment 200234
[details]
[PATCH] Proposed Fix Thanks!
WebKit Commit Bot
Comment 3
2013-05-01 12:54:34 PDT
Comment on
attachment 200234
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 200234 Committed
r149447
: <
http://trac.webkit.org/changeset/149447
>
WebKit Commit Bot
Comment 4
2013-05-01 12:54:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug