TextTrackMenu crashes in ports where MediaElement players are lazily created https://bugs.webkit.org/show_bug.cgi?id=115485

Null check the player for ports, like iOS, that lazily create the player.

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2013-05-01
Reviewed by Eric Carlson.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::platformTextTrackMenu):
(WebCore::HTMLMediaElement::closeCaptionTracksChanged):

Canonical link: https://commits.webkit.org/133927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149447 268f45cc-cd09-0410-ab3c-d52691b4dbfc